--- a/css/styles.css
+++ b/css/styles.css
@@ -11303,7 +11303,7 @@ header.masthead {
   padding-bottom: 6rem;
   text-align: center;
   color: #fff;
-  background-image: url("../assets/img/desain\ web\ \(1\).png");
+  background-image: url("../assets/img/classico.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-position: center center;
